# rust-blog

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Rocket.toml  TODO.md  package-lock.json  package.json  seed.sql  tailwind.config.js
assets/css/: input.css
docs/: README.md
docs/api/: database.md  overview.md
docs/development/: guide.md
docs/guides/: quickstart.md
migrations/: 20241222190547_initial_schema.down.sql  20241222190547_initial_schema.up.sql
src/: auth.rs  db.rs  lib.rs  main.rs  models.rs  rocket_app.rs  routes.rs
src/models/: auth.rs  comment.rs  mod.rs  post.rs  user.rs
src/routes/: auth.rs  comments.rs  mod.rs  posts.rs  profile.rs
src/services/: comment_service.rs  db.rs  mod.rs  post_service.rs  user_service.rs
static/assets/css/: input.css  output.css
templates/: base.html.tera  edit_comment.html.tera  edit_post.html.tera  index.html.tera  login.html.tera  new_post.html.tera  post.html.tera  profile.html.tera  register.html.tera
templates/posts/: edit.html.tera  index.html.tera  new.html.tera  show.html.tera
tests/: blog_tests.rs  comment_tests.rs  post_tests.rs  rocket_tests.rs  test_cleanup.rs  web_tests.rs
tests/common/: mod.rs
