[package]
name = "rust-blog"
version = "0.2.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
anyhow = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
