[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
