[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled", "uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
bcrypt = "0.15"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
dotenvy = "0.15"

[dev-dependencies]
lazy_static = "1.4"
ctor = "0.2"
